k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: nicolascf/flask:1.0.0-dc22548
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolume:
            persistentVolumeReclaimPolicy: Retain # Referenciando o PV diretamente
