k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-backend
  labels:
    app: flask-service   # Label para identificação
spec:
  selector:
    app: flask          # Esse label deve estar nos Pods da sua aplicação
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: metrics          # Nome que será referenciado no ServiceMonitor
  type: NodePort
